[package]
name = "pawn_fight"
version = "0.0.1"
authors = ["Shinski"]

[dependencies]
# find_folder = "0.3.0"
itertools = "0.4.13"

piston = "0.26.0"
piston2d-drag_controller = "0.15.0"
piston2d-graphics = "0.18.0"
piston2d-opengl_graphics = "0.35.0"
piston2d-shapes = "0.12.0"

conrod = "0.44.1"

pistoncore-sdl2_window = "0.36.0"
# piston_window = "0.56.0"
piston_window = "0.52.0"

rand = "0.3.14"
# shader_version = "0.2.1"
# vecmath = "0.2.0"