[package]
name = "pawn_fight"
version = "0.0.1"
authors = ["Shinski"]
edition = "2018"

[dependencies]
conrod = "0.62.1"
itertools = "0.10.0"
piston = "0.53.0"
piston2d-drag_controller = "0.30.0"
piston2d-graphics = "0.40.0"
piston2d-opengl_graphics = "0.78.0"
piston2d-shapes = "0.34.0"
piston_window = "0.120.0"
pistoncore-sdl2_window = "0.67.0"
rand = "0.8.3"
